<resources>
    <string name="app_name">BookList</string>

    <string name="book_name">Könyv cím: </string>
    <string name="delivery_address">Szállítási cím: </string>
    <string name="book_author">Szerző: </string>
    <string name="contact">Kapcsolattartó: </string>
    <string name="delivery_deadline">Szállítási határidő: </string>
    <string name="addbook">Add</string>

    <string name="add_del_ddl">Enter delivery deadline</string>
    <string name="add_c_name">Enter contact\'s name</string>
    <string name="add_b_author">Enter book author\'s name</string>
    <string name="add_del_addr">Enter delivery address</string>
    <string name="add_b_name">Enter bookname</string>
    <string name="showXdefault">5</string>
</resources>