<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManualAddActivity">

    <TextView
        android:id="@+id/textViewBookNameLabelM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/book_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDeliveryAddressLabelM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/delivery_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBookNameLabelM" />

    <TextView
        android:id="@+id/textViewBookAuthorLabelM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/book_author"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDeliveryAddressLabelM" />

    <TextView
        android:id="@+id/textViewContactLabelM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/contact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBookAuthorLabelM" />

    <TextView
        android:id="@+id/textViewDeliveryDeadlineLabelM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/delivery_deadline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewContactLabelM" />

    <EditText
        android:id="@+id/editTextBookNameM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:hint="@string/add_b_name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/textViewBookNameLabelM"
        app:layout_constraintStart_toEndOf="@+id/textViewDeliveryDeadlineLabelM"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDeliveryAddressM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:hint="@string/add_del_addr"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDeliveryAddressLabelM"
        app:layout_constraintStart_toEndOf="@+id/textViewDeliveryDeadlineLabelM"
        />

    <EditText
        android:id="@+id/editTextBookAuthorM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:hint="@string/add_b_author"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/textViewBookAuthorLabelM"
        app:layout_constraintStart_toEndOf="@+id/textViewDeliveryDeadlineLabelM" />

    <EditText
        android:id="@+id/editTextContactM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:hint="@string/add_c_name"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@+id/textViewDeliveryDeadlineLabelM"
        app:layout_constraintBottom_toBottomOf="@+id/textViewContactLabelM" />

    <EditText
        android:id="@+id/editTextDeliveryDeadlineM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:hint="@string/add_del_ddl"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/textViewDeliveryDeadlineLabelM"
        app:layout_constraintTop_toBottomOf="@+id/editTextContactM"
        app:layout_constraintBottom_toBottomOf="@+id/textViewDeliveryDeadlineLabelM"/>

    <Button
        android:id="@+id/buttonAddBookM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addbook"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDeliveryDeadlineLabelM" />

</androidx.constraintlayout.widget.ConstraintLayout>