<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    /* THE LAYOUT FOR REPRESENTING DATA OF A LIST ITEM
    Each item has five labels and five values, which are generated with Faker.
    */

    <TextView
        android:id="@+id/textViewBookNameLabelD"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/book_name"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/textViewDeliveryAddressLabelD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDeliveryAddressLabelD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/delivery_address"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/textViewBookAuthorLabelD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBookNameLabelD" />

    <TextView
        android:id="@+id/textViewBookAuthorLabelD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/book_author"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDeliveryAddressLabelD" />

    <TextView
        android:id="@+id/textViewContactLabelD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/contact"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBookAuthorLabelD" />

    <TextView
        android:id="@+id/textViewDeliveryDeadlineLabelD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/delivery_deadline"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewContactLabelD" />

    <TextView
        android:id="@+id/textViewBookNameD"
        style="@style/BookColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/textViewDeliveryAddressD"
        app:layout_constraintStart_toEndOf="@+id/textViewDeliveryDeadlineLabelD"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDeliveryAddressD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/textViewBookAuthorD"
        app:layout_constraintStart_toEndOf="@+id/textViewDeliveryDeadlineLabelD"
        app:layout_constraintTop_toBottomOf="@+id/textViewBookNameD" />

    <TextView
        android:id="@+id/textViewBookAuthorD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/textViewDeliveryDeadlineLabelD"
        app:layout_constraintTop_toBottomOf="@+id/textViewDeliveryAddressD" />

    <TextView
        android:id="@+id/textViewContactD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/textViewDeliveryDeadlineLabelD"
        app:layout_constraintTop_toBottomOf="@+id/textViewBookAuthorD" />

    <TextView
        android:id="@+id/textViewDeliveryDeadlineD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/textViewDeliveryDeadlineLabelD"
        app:layout_constraintTop_toBottomOf="@+id/textViewContactD" />
</androidx.constraintlayout.widget.ConstraintLayout>